prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_complex_logical.diag.txt
ERROR: expression of type 'int|string' cannot be assigned to type 'bool'
testData/diagnostics/compilation_errors/type_inference/test_complex_logical.nut:4:0

// 42 || "hello" => int|string => not subset of bool
local x: bool = 42 || "hello"
^----------------------------
return x


